# kiroku

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  cabal.project  flake.module.nix  flake.nix  mina.kdl  mori.dhall  process-compose.yaml  treefmt.nix
codd-extras/: codd-extras.cabal
codd-extras/ephemeral/Codd/Extras/: TestSupport.hs  WriteSchema.hs
codd-extras/src/Codd/Extras/: Apply.hs  Embedded.hs  ExpectedSchema.hs  Ledger.hs  Lock.hs  Settings.hs  Verify.hs
codd-extras/test/: Main.hs
kiroku-cli/: CHANGELOG.md  kiroku-cli.cabal
kiroku-cli/app/: Main.hs
kiroku-cli/src/Kiroku/: Cli.hs
kiroku-cli/src/Kiroku/Cli/: Command.hs  Parser.hs  Run.hs  Standalone.hs
kiroku-cli/src/Kiroku/Cli/Subscription/: Status.hs
kiroku-cli/test/: Main.hs
kiroku-jitsurei/: kiroku-jitsurei.cabal
kiroku-metrics/: CHANGELOG.md  kiroku-metrics.cabal
kiroku-metrics/example/: Main.hs
kiroku-metrics/src/Kiroku/: Metrics.hs
kiroku-metrics/src/Kiroku/Metrics/: Collector.hs  Config.hs  Health.hs  JSON.hs  Prometheus.hs  Server.hs  Subscriptions.hs  Types.hs  WebSocket.hs
kiroku-metrics/test/: Main.hs
kiroku-metrics/test/Test/: CollectorSpec.hs  IntegrationSpec.hs  ServerSpec.hs  SubscriptionsSpec.hs  WebSocketSpec.hs
kiroku-otel/: CHANGELOG.md  kiroku-otel.cabal
kiroku-otel/src/Kiroku/Otel/: Subscription.hs  TraceContext.hs
kiroku-otel/test/: Main.hs
kiroku-store/: CHANGELOG.md  kiroku-store.cabal
kiroku-store-migrations/: CHANGELOG.md  README.md  kiroku-store-migrations.cabal
kiroku-store-migrations/app/: Main.hs  WriteExpectedSchema.hs
kiroku-store-migrations/app/Kiroku/Store/Migrations/: LegacyCodd.hs
kiroku-store-migrations/expected-schema/v18/: db-settings
kiroku-store-migrations/expected-schema/v18/roles/: kiroku
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/: objrep
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/routines/: notify_events;  prevent_mutation;  protect_deletion;  protect_truncation;
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/sequences/: dead_letters_dead_letter_id_seq  streams_stream_id_seq  subscriptions_subscription_id_seq
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/dead_letters/: objrep
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/: attempt_count  dead_letter_id  reason
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/: dead_letters_attempt_count_not_null  (+8 more)
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/events/: objrep
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/stream_events/: objrep
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/streams/: objrep
kiroku-store-migrations/expected-schema/v18/schemas/kiroku/tables/subscriptions/: objrep
kiroku-store-migrations/ledger-fixups/: 2026-07-05-realign-kiroku-migration-timestamps.sql
kiroku-store-migrations/migrations/: 0003-notify-trigger-append-guard.sql  0008-schema-management-comment.sql  manifest
kiroku-store-migrations/sql-migrations/: 2026-05-16-00-00-00-kiroku-bootstrap.sql  2026-05-16-12-17-14-kiroku-bootstrap.sql  2026-05-26-00-00-00-add-subscription-dead-letters.sql  2026-06-11-00-00-01-dead-letters-event-id-index.sql  2026-06-11-00-00-02-index-hygiene-and-streams-fillfactor.sql  2026-06-14-14-01-17-stream-name-length-check.sql  2026-06-24-00-00-00-stream-truncate-before.sql
kiroku-store-migrations/src/Kiroku/Store/: Migrations.hs
kiroku-store-migrations/src/Kiroku/Store/Migrations/: ExpectedSchema.hs  Guards.hs  New.hs
kiroku-store-migrations/src/Kiroku/Store/Migrations/History/: Codd.hs
kiroku-store-migrations/src/Kiroku/Store/Migrations/Internal/: Definition.hs  EmbedFile.hs
kiroku-store-migrations/test/: Main.hs
kiroku-store/bench/: Explain.hs  Main.hs  ShibuyaOverhead.hs
kiroku-store/bench/explain-results/: README.md  anyversion-singleton.json  anyversion-singleton.txt  auto-explain.csv
kiroku-store/bench/results/: baseline.csv  shibuya_adapter_overhead_20260324.txt
kiroku-store/bench/sql/: bench_append_batch_10.sql  bench_append_batch_100.sql  bench_append_batch_1000.sql  bench_append_concurrent.sql  bench_append_concurrent_batch.sql  bench_append_single.sql  bench_mixed.sql  bench_mixed_read.sql  bench_mixed_write.sql  bench_read.sql  bench_read_all.sql  bench_read_category.sql  bench_read_stream.sql  ensure_streams.sql  reset.sql  run_benchmarks.sh  setup.sql
kiroku-store/example/: Main.hs
kiroku-store/sql/: schema.sql
kiroku-store/src/Kiroku/: Store.hs
kiroku-store/src/Kiroku/Store/: Append.hs  Causation.hs  Connection.hs  Effect.hs  Error.hs  Lifecycle.hs  Link.hs  Notification.hs  Observability.hs  Read.hs  SQL.hs  Schema.hs  Settings.hs  Subscription.hs  Transaction.hs  Types.hs
kiroku-store/src/Kiroku/Store/Effect/: Resource.hs
kiroku-store/src/Kiroku/Store/Subscription/: Effect.hs  EventPublisher.hs  Fsm.hs  Stream.hs  Types.hs  Worker.hs
kiroku-store/test/: Main.hs
kiroku-store/test/Shibuya/Adapter/: Kiroku.hs
kiroku-store/test/Test/: CatchupDbErrorNoPrematureSwitch.hs  Category.hs  CategoryIdleNoSpin.hs  Causation.hs  Concurrency.hs  ConsumerGroup.hs  ConsumerGroupEffect.hs  ConsumerGroupSql.hs  EventTypeFilter.hs  FailureInjection.hs  Helpers.hs  InterpreterHooks.hs  NotifyGuard.hs  OriginalStreamName.hs  Properties.hs  PublisherCallbackResilience.hs  PublisherIdleAdvance.hs  PublisherRestartNoRebroadcast.hs  ReadStream.hs  StartupFailureSurfacing.hs  StreamBridgeTermination.hs  StreamNameLookup.hs  SubscriptionPauseResume.hs  SubscriptionReconnect.hs  SubscriptionRegistry.hs  SubscriptionRetryDeadLetter.hs  SubscriptionState.hs  Transaction.hs  TruncateBefore.hs
kiroku-test-support/: kiroku-test-support.cabal
kiroku-test-support/src/Kiroku/Test/: Postgres.hs
shibuya-kiroku-adapter/: CHANGELOG.md  shibuya-kiroku-adapter.cabal
shibuya-kiroku-adapter/src/Shibuya/Adapter/: Kiroku.hs
shibuya-kiroku-adapter/src/Shibuya/Adapter/Kiroku/: Convert.hs
shibuya-kiroku-adapter/test/: Main.hs
(+219 files in other folders)
