cabal-version: 3.0
name:          codd-extras
version:       0.1.0.0
synopsis:      Shared helpers for embedded codd migrations
description:
  Small dependency-light adapters for applying compile-time embedded SQL
  migrations with codd.

homepage:      https://github.com/shinzui/kiroku
bug-reports:   https://github.com/shinzui/kiroku/issues
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
license:       BSD-3-Clause
build-type:    Simple
category:      Database

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          common
  exposed-modules:
    Codd.Extras.Apply
    Codd.Extras.Embedded
    Codd.Extras.ExpectedSchema
    Codd.Extras.Ledger
    Codd.Extras.Lock
    Codd.Extras.Settings
    Codd.Extras.Verify

  hs-source-dirs:  src
  build-depends:
    , attoparsec         >=0.14
    , base               >=4.18  && <5
    , bytestring         >=0.11  && <0.13
    , codd               >=0.1.8 && <0.2
    , directory          >=1.3   && <1.4
    , filepath           >=1.4   && <1.6
    , postgresql-simple
    , streaming          >=0.2   && <0.3
    , temporary          >=1.3   && <1.4
    , text               >=2.0   && <2.2
    , time               >=1.12  && <1.15

library ephemeral
  import:          common
  exposed-modules:
    Codd.Extras.TestSupport
    Codd.Extras.WriteSchema

  hs-source-dirs:  ephemeral
  build-depends:
    , base          >=4.18 && <5
    , codd
    , codd-extras
    , ephemeral-pg  >=0.2  && <0.3
    , text          >=2.0  && <2.2
    , time          >=1.12 && <1.15

test-suite codd-extras-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                   >=4.18 && <5
    , bytestring
    , codd
    , codd-extras
    , codd-extras:ephemeral
    , hspec                  >=2.10 && <2.12
    , postgresql-simple
    , text                   >=2.0  && <2.2
    , time                   >=1.12 && <1.15
