cabal-version:   3.0
name:            kiroku-cli
version:         0.1.0.0
synopsis:        Embeddable operator CLI for Kiroku
description:
  Parser, runner, and executable entry points for Kiroku operator commands.
  The library is designed for embedding in host application CLIs, while the
  executable is a thin wrapper over the same parser and runner.

homepage:        https://github.com/shinzui/kiroku
bug-reports:     https://github.com/shinzui/kiroku/issues
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
license:         BSD-3-Clause
build-type:      Simple
category:        Database, Eventing
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/shinzui/kiroku.git

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

  ghc-options:        -Wall

library
  import:          common
  exposed-modules:
    Kiroku.Cli
    Kiroku.Cli.Command
    Kiroku.Cli.Parser
    Kiroku.Cli.Run

  build-depends:
    , base                  >=4.18 && <5
    , optparse-applicative  >=0.19 && <0.20

  hs-source-dirs:  src

executable kiroku
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , kiroku-cli
    , optparse-applicative

test-suite kiroku-cli-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , hspec                 >=2.10 && <2.12
    , kiroku-cli
    , optparse-applicative
