cabal-version:   3.0
name:            kiroku-metrics
version:         0.1.0.0
synopsis:
  Metrics, health, and event-streaming HTTP endpoints for Kiroku

description:
  HTTP/JSON, Prometheus, and WebSocket endpoints exposing operational metrics for
  a running Kiroku event store, plus a WebSocket channel for streaming events out
  of the store. A sister package to @kiroku-store@; the core library never depends
  on a web framework.

author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
license:         BSD-3-Clause
build-type:      Simple
category:        Database, Eventing, Observability
extra-doc-files: CHANGELOG.md
homepage:        https://github.com/shinzui/kiroku
bug-reports:     https://github.com/shinzui/kiroku/issues

source-repository head
  type:     git
  location: https://github.com/shinzui/kiroku.git

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards

  ghc-options:        -Wall

library
  import:          common
  exposed-modules:
    Kiroku.Metrics
    Kiroku.Metrics.Collector
    Kiroku.Metrics.Types

  build-depends:
    , aeson         >=2.1  && <2.3
    , base          >=4.18 && <5
    , containers    >=0.6  && <0.8
    , kiroku-store  ^>=0.2
    , stm           >=2.5  && <2.6
    , text          >=2.0  && <2.2
    , time          >=1.12 && <1.15
    , uuid          >=1.3  && <1.4

  hs-source-dirs:  src

test-suite kiroku-metrics-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Test.CollectorSpec
    Test.IntegrationSpec

  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                >=2.1  && <2.3
    , base                 >=4.18 && <5
    , containers           >=0.6  && <0.8
    , generic-lens         >=2.2  && <2.4
    , hasql-pool           >=1.2  && <1.5
    , hspec                >=2.10 && <2.12
    , kiroku-metrics
    , kiroku-store         ^>=0.2
    , kiroku-test-support
    , lens                 >=5.2  && <5.4
    , stm                  >=2.5  && <2.6
    , text                 >=2.0  && <2.2
    , uuid                 >=1.3  && <1.4
