cabal-version:      3.0
name:               kiroku-store-migrations
version:            0.1.1.0
synopsis:           Schema migrations for kiroku-store
description:
  Embedded codd migrations and a migration executable for installing and
  upgrading the PostgreSQL schema used by @kiroku-store@.

homepage:           https://github.com/shinzui/kiroku
bug-reports:        https://github.com/shinzui/kiroku/issues
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
license:            BSD-3-Clause
build-type:         Simple
category:           Database, Eventing
extra-doc-files:    CHANGELOG.md
extra-source-files:
  expected-schema/v18/db-settings
  expected-schema/v18/roles/kiroku
  expected-schema/v18/schemas/kiroku/objrep
  expected-schema/v18/schemas/kiroku/routines/notify_events;
  expected-schema/v18/schemas/kiroku/routines/prevent_mutation;
  expected-schema/v18/schemas/kiroku/routines/protect_deletion;
  expected-schema/v18/schemas/kiroku/routines/protect_truncation;
  expected-schema/v18/schemas/kiroku/sequences/dead_letters_dead_letter_id_seq
  expected-schema/v18/schemas/kiroku/sequences/streams_stream_id_seq
  expected-schema/v18/schemas/kiroku/sequences/subscriptions_subscription_id_seq
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/attempt_count
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/consumer_group_member
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/created_at
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/dead_letter_id
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/event_id
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/global_position
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/reason
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/reason_summary
  expected-schema/v18/schemas/kiroku/tables/dead_letters/cols/subscription_name
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_attempt_count_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_consumer_group_member_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_created_at_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_dead_letter_id_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_event_id_fkey
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_event_id_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_global_position_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_pkey
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_reason_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_reason_summary_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_subscription_name_consumer_group_member_global_key
  expected-schema/v18/schemas/kiroku/tables/dead_letters/constraints/dead_letters_subscription_name_not_null
  expected-schema/v18/schemas/kiroku/tables/dead_letters/indexes/dead_letters_pkey
  expected-schema/v18/schemas/kiroku/tables/dead_letters/indexes/dead_letters_subscription_name_consumer_group_member_global_key
  expected-schema/v18/schemas/kiroku/tables/dead_letters/indexes/ix_dead_letters_event_id
  expected-schema/v18/schemas/kiroku/tables/dead_letters/indexes/ix_dead_letters_subscription_position
  expected-schema/v18/schemas/kiroku/tables/dead_letters/objrep
  expected-schema/v18/schemas/kiroku/tables/events/cols/causation_id
  expected-schema/v18/schemas/kiroku/tables/events/cols/correlation_id
  expected-schema/v18/schemas/kiroku/tables/events/cols/created_at
  expected-schema/v18/schemas/kiroku/tables/events/cols/data
  expected-schema/v18/schemas/kiroku/tables/events/cols/event_id
  expected-schema/v18/schemas/kiroku/tables/events/cols/event_type
  expected-schema/v18/schemas/kiroku/tables/events/cols/metadata
  expected-schema/v18/schemas/kiroku/tables/events/constraints/events_created_at_not_null
  expected-schema/v18/schemas/kiroku/tables/events/constraints/events_data_not_null
  expected-schema/v18/schemas/kiroku/tables/events/constraints/events_event_id_not_null
  expected-schema/v18/schemas/kiroku/tables/events/constraints/events_event_type_not_null
  expected-schema/v18/schemas/kiroku/tables/events/constraints/events_pkey
  expected-schema/v18/schemas/kiroku/tables/events/indexes/events_pkey
  expected-schema/v18/schemas/kiroku/tables/events/indexes/ix_events_causation_id
  expected-schema/v18/schemas/kiroku/tables/events/indexes/ix_events_correlation_id
  expected-schema/v18/schemas/kiroku/tables/events/objrep
  expected-schema/v18/schemas/kiroku/tables/events/triggers/no_delete_events
  expected-schema/v18/schemas/kiroku/tables/events/triggers/no_truncate_events
  expected-schema/v18/schemas/kiroku/tables/events/triggers/no_update_events
  expected-schema/v18/schemas/kiroku/tables/stream_events/cols/event_id
  expected-schema/v18/schemas/kiroku/tables/stream_events/cols/original_stream_id
  expected-schema/v18/schemas/kiroku/tables/stream_events/cols/original_stream_version
  expected-schema/v18/schemas/kiroku/tables/stream_events/cols/stream_id
  expected-schema/v18/schemas/kiroku/tables/stream_events/cols/stream_version
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_event_id_fkey
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_event_id_not_null
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_original_stream_id_not_null
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_original_stream_version_not_null
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_pkey
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_stream_id_fkey
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_stream_id_not_null
  expected-schema/v18/schemas/kiroku/tables/stream_events/constraints/stream_events_stream_version_not_null
  expected-schema/v18/schemas/kiroku/tables/stream_events/indexes/ix_stream_events_all_by_origin
  expected-schema/v18/schemas/kiroku/tables/stream_events/indexes/stream_events_pkey
  expected-schema/v18/schemas/kiroku/tables/stream_events/indexes/ux_stream_events_stream_version
  expected-schema/v18/schemas/kiroku/tables/stream_events/objrep
  expected-schema/v18/schemas/kiroku/tables/stream_events/triggers/no_delete_stream_events
  expected-schema/v18/schemas/kiroku/tables/stream_events/triggers/no_truncate_stream_events
  expected-schema/v18/schemas/kiroku/tables/stream_events/triggers/no_update_stream_events
  expected-schema/v18/schemas/kiroku/tables/streams/cols/category
  expected-schema/v18/schemas/kiroku/tables/streams/cols/created_at
  expected-schema/v18/schemas/kiroku/tables/streams/cols/deleted_at
  expected-schema/v18/schemas/kiroku/tables/streams/cols/stream_id
  expected-schema/v18/schemas/kiroku/tables/streams/cols/stream_name
  expected-schema/v18/schemas/kiroku/tables/streams/cols/stream_version
  expected-schema/v18/schemas/kiroku/tables/streams/cols/truncate_before
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/chk_streams_stream_name_length
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/ix_streams_stream_name
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_created_at_not_null
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_pkey
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_stream_id_not_null
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_stream_name_not_null
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_stream_version_not_null
  expected-schema/v18/schemas/kiroku/tables/streams/constraints/streams_truncate_before_not_null
  expected-schema/v18/schemas/kiroku/tables/streams/indexes/ix_streams_category
  expected-schema/v18/schemas/kiroku/tables/streams/indexes/ix_streams_stream_name
  expected-schema/v18/schemas/kiroku/tables/streams/indexes/streams_pkey
  expected-schema/v18/schemas/kiroku/tables/streams/objrep
  expected-schema/v18/schemas/kiroku/tables/streams/triggers/no_delete_streams
  expected-schema/v18/schemas/kiroku/tables/streams/triggers/no_truncate_streams
  expected-schema/v18/schemas/kiroku/tables/streams/triggers/stream_events_notify_insert
  expected-schema/v18/schemas/kiroku/tables/streams/triggers/stream_events_notify_update
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/consumer_group_member
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/consumer_group_size
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/created_at
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/last_seen
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/stream_name
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/subscription_id
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/subscription_name
  expected-schema/v18/schemas/kiroku/tables/subscriptions/cols/updated_at
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_consumer_group_member_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_consumer_group_size_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_created_at_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_last_seen_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_pkey
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_stream_name_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_subscription_id_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_subscription_name_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/constraints/subscriptions_updated_at_not_null
  expected-schema/v18/schemas/kiroku/tables/subscriptions/indexes/ix_subscriptions_name_member
  expected-schema/v18/schemas/kiroku/tables/subscriptions/indexes/subscriptions_pkey
  expected-schema/v18/schemas/kiroku/tables/subscriptions/objrep
  migrations.lock
  README.md
  sql-migrations/*.sql

source-repository head
  type:     git
  location: https://github.com/shinzui/kiroku.git

flag expected-schema-tool
  description:
    Build the kiroku-write-expected-schema executable, which regenerates the
    checked-in codd expected-schema snapshot. On by default so
    `cabal run kiroku-write-expected-schema` works in the dev shell. It depends
    on ephemeral-pg, which has no buildable source in the pinned Nix Haskell
    set, so nix turns it off with `-f-expected-schema-tool`.

  default:     True
  manual:      False

common common
  default-language:   GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          common
  exposed-modules:
    Kiroku.Store.Migrations
    Kiroku.Store.Migrations.ExpectedSchema
    Kiroku.Store.Migrations.Guards
    Kiroku.Store.Migrations.New

  hs-source-dirs:  src
  build-depends:
    , base               >=4.18   && <5
    , bytestring         >=0.11   && <0.13
    , codd               >=0.1.8  && <0.2
    , codd-extras
    , directory          >=1.3    && <1.4
    , file-embed         >=0.0.15 && <0.0.17
    , filepath           >=1.4    && <1.6
    , postgresql-simple
    , streaming          >=0.2    && <0.3
    , temporary          >=1.3    && <1.4
    , text               >=2.0    && <2.2
    , time               >=1.12   && <1.15

executable kiroku-store-migrate
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , bytestring
    , codd
    , directory
    , kiroku-store-migrations
    , text
    , time                     >=1.12 && <1.15

executable kiroku-write-expected-schema
  import:         common
  main-is:        WriteExpectedSchema.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  if !flag(expected-schema-tool)
    buildable: False

  build-depends:
    , attoparsec
    , base                     >=4.18 && <5
    , codd
    , codd-extras:ephemeral
    , ephemeral-pg             >=0.2  && <0.3
    , kiroku-store-migrations
    , text                     >=2.0  && <2.2
    , time                     >=1.12 && <1.15

test-suite kiroku-store-migrations-test
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                    >=2.1  && <2.3
    , async
    , attoparsec
    , base                     >=4.18 && <5
    , codd
    , containers               >=0.6  && <0.8
    , directory                >=1.3
    , ephemeral-pg             >=0.2  && <0.3
    , filepath                 >=1.4  && <1.6
    , hasql                    >=1.10 && <1.11
    , hasql-pool               >=1.2  && <1.5
    , hspec                    >=2.10 && <2.12
    , kiroku-store             ^>=0.2
    , kiroku-store-migrations
    , temporary                >=1.3  && <1.4
    , text                     >=2.0  && <2.2
    , time                     >=1.12 && <1.15
    , vector                   >=0.13 && <0.14
